@@ -438,14 +438,8 @@ MP.send = function(outputindex, data, clonedata) {
 				if (data != undefined)
 					message.data = data;
 
-				if (clonedata && message.data && typeof(message.data) === 'object') {
-					if (message.data instanceof Buffer) {
-						var buf = Buffer.alloc(message.data.length);
-						buf.copy(message.data);
-						message.data = buf;
-					} else
-						message.data = U.clone(message.data);
-				}
+				if (clonedata && message.data && typeof(message.data) === 'object')
+					message.data = message.data instanceof Buffer ? Buffer.from(message.data) : U.clone(message.data);
 
 				message.used++;
 				message.instance = schema;
@@ -1114,14 +1108,8 @@ FP.ontrigger = function(outputindex, data, controller, events) {
 						message.used = 1;
 					}
 
-					if (i && (self.cloning != false) && message.data && typeof(message.data) === 'object') {
-						if (message.data instanceof Buffer) {
-							var buf = Buffer.alloc(message.data.length);
-							buf.copy(message.data);
-							message.data = buf;
-						} else
-							message.data = U.clone(message.data);
-					}
+					if (i && (self.cloning != false) && message.data && typeof(message.data) === 'object')
+						message.data = message.data instanceof Buffer ? Buffer.from(message.data) : U.clone(message.data);
 
 					message.main = self;
 					message.controller = controller;
