@@ -3,6 +3,7 @@
 ========================
 
 - fixed `Message-ID` generator for email messages
+- __critital__ fixed cloning buffers in the `FlowStream`
 
 ========================
 0.0.98
